[project]
name = "md2any"
version = "0.1.0"
description = "A tool to convert Markdown documents to various formats with custom CSS styling"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "Flask",
    "markdown",
    "pymdown-extensions",
    "beautifulsoup4",
    "requests",
    "css_inline",
    "Flask-Cors",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest>=6.0",
    "black",
    "flake8",
]