[project]
name = "md2any"
version = "1.0.0"
description = "A tool to convert Markdown documents to various formats with custom CSS styling"
authors = [
    {name = "md2any contributors"}
]
dependencies = [
    "Flask>=2.3.0",
    "markdown>=3.4.0",
    "pymdown-extensions>=10.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "css_inline>=0.11.0",
    "Flask-Cors>=4.0.0",
    "watchdog>=3.0.0",
]
requires-python = ">=3.8.1"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "themes/",
    "*.md",
    ".git*",
    "docker*",
    "Dockerfile*",
    "start_*.sh",
    "Makefile",
    "redeploy.sh",
    ".env*",
    ".venv/",
    "__pycache__/",
    "*.pyc",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0", 
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[tool.uv.sources]
# For local development, you can pin to specific versions
# watchdog = { git = "https://github.com/gorakhargosh/watchdog.git" }

[tool.black]
line-length = 88
target-version = ['py38']
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8.1"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true